message(STATUS "Deliberation")

set(DELIBERATION_INCLUDE_DIRS

    ${PROJECT_SOURCE_DIR}/Source/

    ${CXXOPTS_INCLUDE_DIR}
    ${SDL2_INCLUDE_DIR}
    ${SDL2_TTF_INCLUDE_DIR}
    ${SDL2_IMAGE_INCLUDE_DIR}
    ${GLBINDING_INCLUDE_DIR}
    ${GLM_INCLUDE_DIR}
    ${JSON_INCLUDE_DIR}
    ${IMGUI_INCLUDE_DIRS}
    ${BOOST_INCLUDE_DIRS}
    ${TINYOBJLOADER_INCLUDE_DIRS}

    CACHE INTERAL "All Deliberation include dirs" 
)

# sources
set(sources
	Core/Assert.cpp
	Core/Assert.h
	Core/BitUtils.cpp
	Core/BitUtils.h
	Core/Blob.cpp
	Core/Blob.h
	Core/BlobValueAccessor.cpp
	Core/BlobValueAccessor.h
	Core/BlobValue.h
	Core/Chrono.h
	Core/Color.cpp
	Core/Color.h
	Core/DataLayout.cpp
	Core/DataLayoutField.cpp
	Core/DataLayoutField.h
	Core/DataLayout.h
	Core/Detail/IBlobImpl.h
	Core/Detail/INamedDataMemberOfImpl.h
	Core/Detail/NamedDataMemberOf.h
	Core/Detail/VectorBlobImpl.h
	Core/Dispatch.h
	Core/EventListenerProxy.cpp
	Core/EventListenerProxy.h
	Core/EventListenerProxy.inl
	Core/EventListenerProxyImpl.h
	Core/EventDomain.cpp
	Core/EventDomain.inl
	Core/EventDomain.h
	Core/ElementalTypes.cpp
	Core/ElementalTypes.h
	Core/FileModificationPoll.cpp
	Core/FileModificationPoll.h
	Core/FileUtils.cpp
	Core/FileUtils.h
	Core/FilesystemUtils.cpp
	Core/FilesystemUtils.h
	Core/FpsCounter.cpp
	Core/FpsCounter.h
	Core/HashUtils.h
	Core/IntTypes.h
	Core/Json.h
	Core/LapTimer.cpp
	Core/LapTimer.h
	Core/LayoutedBlob.cpp
	Core/LayoutedBlobElement.cpp
	Core/LayoutedBlobElement.h
	Core/LayoutedBlob.h
	Core/LinearMap.h
	Core/LinearOctree.h
	Core/Noise.cpp
	Core/Noise.h
	Core/MainLoop.cpp
	Core/MainLoop.h
	Core/Math/AABB.cpp
	Core/Math/AABB.h
	Core/Math/Box.cpp
	Core/Math/Box.h
	Core/Math/FloatUtils.h
	Core/Math/GLMUtils.cpp
	Core/Math/GLMUtils.h
	Core/Math/MathUtils.cpp
	Core/Math/MathUtils.h
	Core/Math/Morton.cpp
	Core/Math/Morton.h
	Core/Math/Plane.cpp
	Core/Math/Plane.h
	Core/Math/PolygonClipping.cpp
	Core/Math/PolygonClipping.h
	Core/Math/Pose3D.cpp
	Core/Math/Pose3D.h
	Core/Math/PrimitiveCompare.h
	Core/Math/PrimitiveIntersection.cpp
	Core/Math/PrimitiveIntersection.h
	Core/Math/Random.h
	Core/Math/Ray2D.cpp
	Core/Math/Ray2D.h
	Core/Math/Ray3D.cpp
	Core/Math/Ray3D.h
	Core/Math/Rect3D.cpp
	Core/Math/Rect3D.h
	Core/Math/Sphere.cpp
	Core/Math/Sphere.h
	Core/Math/Trajectory.h
	Core/Math/Transform3D.cpp
	Core/Math/Transform3D.h
	Core/Math/Vec.h
	Core/Monostate.h
	Core/OffsetOf.h
	Core/Optional.h
	Core/RandomColorGenerator.cpp
	Core/RandomColorGenerator.h
	Core/RefCounted.h
	Core/RefPtr.h
	Core/RingBuffer.h
	Core/ScopeProfiler.cpp
	Core/ScopeProfiler.h
	Core/Span.h
	Core/SparseVector.h
	Core/StreamUtils.h
	Core/StringUtils.cpp
	Core/StringUtils.h
	Core/Swallow.h
	Core/TypedBlobValueAccessor.h
	Core/TypeID.h
	Core/Types.cpp
	Core/Types.h
	Core/Viewport.cpp
	Core/Viewport.h

	Deliberation.cpp
	Deliberation.h

	Draw/BlendState.cpp
	Draw/BlendState.h
	Draw/BufferTextureBinding.cpp
	Draw/BufferTextureBinding.h
	Draw/Buffer.cpp
	Draw/Buffer.h
	Draw/Clear.cpp
	Draw/Clear.h
	Draw/CullState.cpp
	Draw/CullState.h
	Draw/DepthState.cpp
	Draw/DepthState.h
	Draw/Detail/BufferBinding.h
	Draw/Detail/BufferImpl.cpp
	Draw/Detail/BufferImpl.h
	Draw/Detail/ClearImpl.cpp
	Draw/Detail/ClearImpl.h
	Draw/Detail/DrawImpl.cpp
	Draw/Detail/DrawImpl.h
	Draw/Detail/FramebufferImpl.cpp
	Draw/Detail/FramebufferImpl.h
	Draw/Detail/ProgramImpl.cpp
	Draw/Detail/ProgramImpl.h
	Draw/Detail/QueryImpl.cpp
	Draw/Detail/QueryImpl.h
	Draw/Detail/SamplerImpl.cpp
	Draw/Detail/SamplerImpl.h
	Draw/Detail/SurfaceDownloadImpl.cpp
	Draw/Detail/SurfaceDownloadImpl.h
	Draw/Detail/TextureImpl.cpp
	Draw/Detail/TextureImpl.h
	Draw/Detail/UniformBufferBinding.h
	Draw/Detail/UniformImpl.cpp
	Draw/Detail/UniformImpl.h
	Draw/Detail/VertexAttributeBinding.h
	Draw/DrawContext.cpp
	Draw/DrawContext.h
	Draw/Draw.cpp
	Draw/Draw.h
	Draw/DrawState.cpp
	Draw/DrawState.h
	Draw/Enum.h
	Draw/Framebuffer.cpp
	Draw/Framebuffer.h
	Draw/FramebufferBinding.cpp
	Draw/FramebufferBinding.h
	Draw/GL/GLBindVertexAttribute.cpp
	Draw/GL/GLBindVertexAttribute.h
	Draw/GL/GLSLSizeOf.cpp
	Draw/GL/GLSLSizeOf.h
	Draw/GL/GLSLTypeOf.h
	Draw/GL/GLStateManager.cpp
	Draw/GL/GLStateManager.h
	Draw/GL/GLType.cpp
	Draw/GL/GLType.h
	Draw/GL/GLUtils.cpp
	Draw/GL/GLUtils.h
	Draw/PixelFormat.cpp
	Draw/PixelFormat.h
	Draw/Program.cpp
	Draw/Program.h
	Draw/ProgramInterface.cpp
	Draw/ProgramInterfaceFragmentOutput.cpp
	Draw/ProgramInterfaceFragmentOutput.h
	Draw/ProgramInterface.h
	Draw/ProgramInterfaceBufferTexture.cpp
	Draw/ProgramInterfaceBufferTexture.h
	Draw/ProgramInterfaceSampler.cpp
	Draw/ProgramInterfaceSampler.h
	Draw/ProgramInterfaceUniformBlock.cpp
	Draw/ProgramInterfaceUniformBlock.h
	Draw/ProgramInterfaceUniform.cpp
	Draw/ProgramInterfaceUniform.h
	Draw/ProgramInterfaceVertexAttribute.cpp
	Draw/ProgramInterfaceVertexAttribute.h
	Draw/Query.cpp
	Draw/Query.h
	Draw/RasterizerState.cpp
	Draw/RasterizerState.h
	Draw/Sampler.cpp
	Draw/Sampler.h
	Draw/StencilState.cpp
	Draw/StencilState.h
	Draw/SurfaceBinary.cpp
	Draw/SurfaceBinary.h
	Draw/Surface.cpp
	Draw/SurfaceDownload.cpp
	Draw/SurfaceDownload.h
	Draw/Surface.h
	Draw/TextureBinary.cpp
	Draw/TextureBinary.h
	Draw/Texture.cpp
	Draw/Texture.h
	Draw/Uniform.cpp
	Draw/Uniform.h
	Draw/UniformBufferHandle.cpp
	Draw/UniformBufferHandle.h
	Draw/Util/RangedGpuScope.cpp
	Draw/Util/RangedGpuScope.h
	Draw/VertexAttribute.cpp
	Draw/VertexAttribute.h

	ECS/AbstractWorld.cpp
	ECS/AbstractWorld.h
	ECS/ComponentBase.cpp
	ECS/ComponentBase.h
	ECS/ComponentFilter.cpp
	ECS/ComponentFilter.h
	ECS/Component.h
	ECS/ComponentPrototype.inl
	ECS/ComponentPrototype.h
	ECS/Components.cpp
	ECS/Components.h
	ECS/ComponentWrapper.h
	ECS/Defines.h
	ECS/EntityComponentSetup.h
	ECS/Entity.cpp
	ECS/EntityData.h
	ECS/Entity.h
	ECS/EntityPrototype.cpp
	ECS/EntityPrototype.h
	ECS/LevelEntity.h
	ECS/Level.cpp
	ECS/Level.h
    ECS/EntityPrototypeManager.cpp
    ECS/EntityPrototypeManager.h
	ECS/SystemBase.cpp
	ECS/SystemBase.h
	ECS/System.h
	ECS/Systems/ApplicationSystem.h
	ECS/Systems/PhysicsWorldSystem.cpp
	ECS/Systems/PhysicsWorldSystem.h
	ECS/Systems/SkyboxSystem.h
	ECS/World.cpp
	ECS/World.h
	ECS/WorldProfiler.cpp
	ECS/WorldProfiler.h

	Font/Font.cpp
	Font/Font.h
	Font/Label.cpp
	Font/Label.h
	Font/LabelRenderer.cpp
	Font/LabelRenderer.h
	Font/MultilineLabel.cpp
	Font/MultilineLabel.h

	ImGui/ImGui.cpp
	ImGui/ImGui.h
	ImGui/ImGuiRenderer.cpp
	ImGui/ImGuiRenderer.h
	ImGui/ImGuiSystem.cpp
	ImGui/ImGuiSystem.h

	Physics/BoxShape.cpp
	Physics/BoxShape.h
	Physics/Broadphase.cpp
	Physics/BroadphaseFilter.h
	Physics/Broadphase.h
	Physics/BroadphaseProxy.cpp
	Physics/BroadphaseProxy.h
	Physics/CollisionObject.cpp
	Physics/CollisionObject.h
	Physics/CollisionShape.cpp
	Physics/CollisionShape.h
	Physics/Contacts/BoxContact.cpp
	Physics/Contacts/BoxContact.h
	Physics/Contacts/Contact.cpp
	Physics/Contacts/ContactDispatcher.cpp
	Physics/Contacts/ContactDispatcher.h
	Physics/Contacts/Contact.h
	Physics/Contacts/SphereContact.cpp
	Physics/Contacts/SphereContact.h
	Physics/Narrowphase.cpp
	Physics/Narrowphase.h
	Physics/NarrowphasePrimitiveTest.cpp
	Physics/NarrowphasePrimitiveTest.h
	Physics/PhysicsWorld.cpp
	Physics/PhysicsWorld.h
	Physics/ReferenceBroadphase.cpp
	Physics/ReferenceBroadphase.h
	Physics/RigidBody.cpp
	Physics/RigidBody.h
	Physics/SphereShape.cpp
	Physics/SphereShape.h

	Platform/Application.cpp
	Platform/Application.h
	Platform/Input.cpp
	Platform/Input.h
	Platform/InputEvent.h
	Platform/InputEventReceiver.h
	Platform/InputLayer.cpp
	Platform/InputLayer.h
	Platform/KeyMap.h
	Platform/MouseButtonEvent.h
	Platform/MouseButton.h

	Resource/AbstractPrototype.cpp
	Resource/AbstractPrototype.h
	Resource/PrototypeManager.cpp
	Resource/PrototypeManager.h
	Resource/PrototypeManager.inl

	Scene/Camera2D.cpp
	Scene/Camera2D.h
	Scene/Camera3D.cpp
	Scene/Camera3D.h
	Scene/CameraDolly3D.cpp
	Scene/CameraDolly3D.h
	Scene/ConeMesh.cpp
	Scene/ConeMesh.h
	Scene/CuboidMesh.cpp
	Scene/CuboidMesh.h
	Scene/Debug/DebugCameraNavigator3D.cpp
	Scene/Debug/DebugCameraNavigator3D.h
	Scene/Debug/DebugCubemapRenderer.cpp
	Scene/Debug/DebugCubemapRenderer.h
	Scene/Debug/DebugGeometryRenderer.cpp
	Scene/Debug/DebugGeometryRenderer.h
	Scene/Debug/DebugGeometryNode.cpp
	Scene/Debug/DebugGeometryNode.h
	Scene/Debug/DebugGrid3DRenderer.cpp
	Scene/Debug/DebugGrid3DRenderer.h
	Scene/Debug/DebugGroundPlaneRenderer.cpp
	Scene/Debug/DebugGroundPlaneRenderer.h
	Scene/Debug/DebugPointLightSystem.cpp
	Scene/Debug/DebugPointLightSystem.h
	Scene/Debug/DebugPhysicsWorldRenderer.cpp
	Scene/Debug/DebugPhysicsWorldRenderer.h
	Scene/Debug/DebugSurfaceOverlayRenderer.cpp
	Scene/Debug/DebugSurfaceOverlayRenderer.h
	Scene/Debug/DebugTexture2dRenderer.cpp
	Scene/Debug/DebugTexture2dRenderer.h
	Scene/Effects/BloomRenderer.cpp
	Scene/Effects/BloomRenderer.h
	Scene/Effects/GaussianBlur.cpp
	Scene/Effects/GaussianBlur.h
	Scene/Effects/GaussianBlurPass.cpp
	Scene/Effects/GaussianBlurPass.h
	Scene/EdgeToFaceSmoothing.cpp
	Scene/EdgeToFaceSmoothing.h
	Scene/HdrRenderer.cpp
	Scene/HdrRenderer.h
	Scene/Lighting/AmbientLightRenderer.cpp
	Scene/Lighting/AmbientLightRenderer.h
	Scene/Lighting/PointLightRenderer.cpp
	Scene/Lighting/PointLightRenderer.h
	Scene/Texture/ITextureLoaderImpl.cpp
	Scene/Texture/ITextureLoaderImpl.h
	Scene/Texture/TextureLoader.cpp
	Scene/Texture/TextureLoaderCubeFilesImpl.cpp
	Scene/Texture/TextureLoaderCubeFilesImpl.h
	Scene/Texture/TextureLoaderDataImpl.cpp
	Scene/Texture/TextureLoaderDataImpl.h
	Scene/Texture/TextureLoaderFileImpl.cpp
	Scene/Texture/TextureLoaderFileImpl.h
	Scene/Texture/TextureLoader.h
	Scene/Texture/TextureLoaderOrigin.h
	Scene/Texture/TextureLoaderPixelDataImpl.cpp
	Scene/Texture/TextureLoaderPixelDataImpl.h
	Scene/Texture/TextureLoaderSDLSurfaceImpl.cpp
	Scene/Texture/TextureLoaderSDLSurfaceImpl.h
	Scene/Texture/TextureLoaderUnicolorImpl.h
	Scene/MeshCompiler.cpp
	Scene/MeshCompiler.h
	Scene/Mesh.cpp
	Scene/MeshData.cpp
	Scene/MeshData.h
	Scene/Mesh.h
	Scene/Model/Model.h
	Scene/Model/ModelInstance.h
	Scene/Model/ModelRenderer.cpp
	Scene/Model/ModelRenderer.h
	Scene/Pipeline/Renderer.cpp
	Scene/Pipeline/Renderer.h
	Scene/Pipeline/RenderManager.cpp
	Scene/Pipeline/RenderManager.h
	Scene/Pipeline/RenderNode.h
	Scene/Pipeline/RenderPhase.h
	Scene/Pipeline/RenderSystem.cpp
	Scene/Pipeline/RenderSystem.h
	Scene/Pipeline/SingleNodeRenderer.h
	Scene/ScreenSpaceEffect.cpp
	Scene/ScreenSpaceEffect.h
	Scene/SkyboxRenderer.cpp
	Scene/SkyboxRenderer.h
	Scene/SsaoRenderer.cpp
	Scene/SsaoRenderer.h
	Scene/UVSphere.cpp
	Scene/UVSphere.h
	Scene/Vertices.h
)

set(libs
    ${GLFW_LIBRARY}
    ${SDL2_LIBRARY}
    ${SDL2_IMAGE_LIBRARY}
    ${SDL2_TTF_LIBRARY}
    ${OPENGL_gl_LIBRARY}
    ${IMGUI_LIBRARIES}
    ${GLBINDING_LIBRARIES}
    ${TINYOBJLOADER_LIBRARIES}
	-lnvToolsExt
)

set(DELIBERATION_LIBRARIES
    Deliberation
    ${libs}
    CACHE INTERNAL ""
)

# library
add_library(Deliberation 
	STATIC
	${sources})
	
target_link_libraries(Deliberation
    ${libs})
	
# include
message("Deliberation include dirs: ${DELIBERATION_INCLUDE_DIRS}")

target_include_directories(Deliberation
    PUBLIC
    ${DELIBERATION_INCLUDE_DIRS}
)
    
target_compile_definitions(Deliberation
    PUBLIC
    DELIBERATION_BUILD_TYPE_DEBUG=${DELIBERATION_BUILD_TYPE_DEBUG}
    DELIBERATION_BUILD_TYPE_RELEASE=${DELIBERATION_BUILD_TYPE_RELEASE}
    )
